<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirtyWhite"
    android:orientation="vertical"
    tools:context="ui.Menu">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".2"
        app:srcCompat="@drawable/minesweeper" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="250dp"
        android:text="@string/minesweeper"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="45sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45sp"
        android:backgroundTint="@color/dirtyWhite"
        android:gravity="center_horizontal"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/rules_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_button"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:backgroundTint="@color/dirtyWhite"
        android:gravity="center_horizontal"
        android:text="@string/rules"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below= "@+id/rules_button"
        android:backgroundTint="@color/dirtyWhite"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</RelativeLayout>